hide root overflow to make slide up animation look correct

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
     padding-top: 30px;
+    overflow: hidden;
 }
 
 body {
